--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -65,7 +65,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "RAW CELL\n",
+    "RAW CELL - I am changing it\n",
     "\n",
     "This Cell is a 'Raw' Cell - it's just boring text."
    ]
@@ -105,10 +105,30 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "see if you can delete this cell - tip, checkout the *Edit* menu ... or even try right-click\n",
-    "\n"
+    "added with a for above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Big Heading"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "added with a b for below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "just one more way"
    ]
   },
   {
@@ -126,22 +146,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "23"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 + 2 + 3 + 4"
+    "1 + 2 + 3 + 17"
    ]
   },
   {
