End of Episode 1

--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -1761,12 +1761,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "mass = 47.5\n",
-    "age = 122"
+    "print(type(mass))\n",
+    "age = 122\n",
+    "print(type(age))"
    ]
   },
   {
