--- a/lessons/python/ep2-loops.ipynb
+++ b/lessons/python/ep2-loops.ipynb
@@ -58,10 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lead\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'lead'\n",
+    "print(word)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "e\n",
+      "a\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "for char in word:\n",
+    "    print(char)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,10 +157,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "x\n",
+      "y\n",
+      "g\n",
+      "e\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'oxygen'\n",
+    "for char in word:\n",
+    "    print(char)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,9 +205,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "o\n",
+      "x\n",
+      "x\n",
+      "y\n",
+      "y\n",
+      "g\n",
+      "g\n",
+      "e\n",
+      "e\n",
+      "n\n",
+      "n\n",
+      "oxygen\n"
+     ]
+    }
+   ],
    "source": [
     "word = 'oxygen'\n",
     "for char in word:\n",
@@ -210,10 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 5 vowels\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = 0\n",
+    "for i in 'aeiou':\n",
+    "    length = length + 1\n",
+    "print('There are', length, 'vowels')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,10 +315,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n",
+      "after the loop, letter is c\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter = 'z'\n",
+    "for letter in 'abc':\n",
+    "    print(letter)\n",
+    "print('after the loop, letter is', letter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,10 +351,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len('aeiou'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,10 +409,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 4):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,10 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5**3)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,10 +496,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a' + 'b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Newton\n",
+      "\n",
+      "notweN\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = 'Newton'\n",
+    "print(string1)\n",
+    "\n",
+    "string2 = \"\"\n",
+    "print(string2)\n",
+    "\n",
+    "for char in string1:\n",
+    "    string2 = char + string2\n",
+    "    \n",
+    "print(string2)    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -392,10 +554,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0 j = 2.22\n",
+      "i = 1 j = 4.44\n",
+      "i = 2 j = 3.33\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in enumerate([2.22, 4.44, 3.33]):\n",
+    "  print('i =',i, 'j =', j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.22, 4.44, 3.33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [2.22, 4.44, 3.33]\n",
+    "print(list1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,10 +616,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "coefficients = [2, 4, 3]\n",
+    "y = coefficients[0] * x**0 + coefficients[1] * x**1 + coefficients[2] * x**2\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,14 +643,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i 0 c 2\n",
+      "i 1 c 4\n",
+      "i 2 c 3\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "y = 0\n",
+    "x = 5\n",
     "coefficient = [2, 4, 3]\n",
-    "for i, c in enumerate(cc):\n",
-    "    y = # magic required here \n",
+    "for i, c in enumerate(coefficient):\n",
+    "    print('i', i, 'c', c)\n",
+    "    y = y + c*x**i\n",
     "print(y)"
    ]
   },
